one to many and one to one mapping done