@@ -1,6 +1,7 @@
 package com.abhicoder.universityapi.config;
 
 import com.abhicoder.universityapi.model.Course;
+import com.abhicoder.universityapi.model.Parent;
 import com.abhicoder.universityapi.model.User;
 import com.abhicoder.universityapi.repository.CourseRepository;
 import com.abhicoder.universityapi.repository.UserRepository;
@@ -11,6 +12,8 @@ import org.springframework.boot.ApplicationRunner;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -24,7 +27,6 @@ public class MyApplicationRunner implements ApplicationRunner {
     @Autowired
     private CourseRepository courseRepository;
 
-    // TODO: Add Login Authentication
     public MyApplicationRunner(UserRepository userRepository, CourseRepository courseRepository) {
         this.userRepository = userRepository;
         this.courseRepository = courseRepository;
@@ -32,22 +34,43 @@ public class MyApplicationRunner implements ApplicationRunner {
 
     @Override
     public void run(ApplicationArguments args) throws Exception {
+        //oneToManyMapping();
+        oneToOneMapping();
 
-        List<User> students = List.of(
-                new User("Abhishek", "Narvekar", "email", "0612458974"),
-                new User("Felicity", "Smoak", "felicity@gmail.com", "0613272371263"),
-                new User("Oliver", "Queen", "oliver@gmail.com", "06438748373")
-        );
+    }
+    private void oneToManyMapping() {
+        // String firstName, String lastName, String email, String phoneNumber
+        User user1 = new User("Abhishek", "Narvekar", "abhishek@gmail.com", "987643121");
+        User user2 = new User("Amrish", "Schaap", "amrish@gmail.com", "43278956");
+        User user3 = new User("Tommy", "King", "tomy@gmail.com", "3846538945");
+
+        List<User> users = new ArrayList<>(Arrays.asList(
+                user1, user2, user3
+        ));
+
+        userRepository.saveAll(users);
 
         List<Course> courses = List.of(
-                new Course("Java Fundamentals", "Wim Wiltenburg", 23),
-                new Course("IT Service Management", "Usman Ali", 45),
-                new Course("No Sql", "Thijs Otter", 23),
-                new Course("C#", "Gerwin van Dijken", 56),
-                new Course("Web Developement 2", "Mark de Haan", 78)
+                // String courseName, String lecturerName, Integer courseDuration, User user
+                new Course("Java Advanced", "Wim Wiltenburg", 45, user1),
+                new Course("Web Dev 2", "Mark de Haan", 56, user2),
+                new Course("Functional Modelling", "Marya Brutt", 34, user3),
+                new Course("Haarlem Festival", "Thijs Otter", 67, user3)
         );
 
-        userRepository.saveAll(students);
         courseRepository.saveAll(courses);
+    }
+
+    private void oneToOneMapping() {
+        User user = new User("biniam", "king", "biniam@gmail.com", "3409284329");
+
+        Parent parent = new Parent("Janet", "Lisbon", "janet@gmail.com", "938467938476");
+
+        parent.setUser(user);
+        user.setParent(parent);
+
+        userRepository.save(user);
+
+
     }
 }
